--- a/DatabaseDesigner.Wasm/wwwroot/index.html
+++ b/DatabaseDesigner.Wasm/wwwroot/index.html
@@ -8,6 +8,8 @@
     <base href="/" />
 
     <link href="vendor/bootstrap-4.5.2/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="vendor/fontawesome-free-5.14.0-web/css/all.css" rel="stylesheet" />
+    <link href="_content/Z.Blazor.Diagrams/style.css" rel="stylesheet" />
     <link href="_framework/scoped.styles.css" rel="stylesheet" />
 </head>
 
@@ -16,6 +18,7 @@
 
     <script src="vendor/jquery-3.5.1.slim.min.js"></script>
     <script src="vendor/bootstrap-4.5.2/js/bootstrap.bundle.min.js"></script>
+    <script src="_content/Z.Blazor.Diagrams/script.min.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
 
