--- a/DatabaseDesigner.Wasm/wwwroot/index.html
+++ b/DatabaseDesigner.Wasm/wwwroot/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>DatabaseDesigner.Wasm</title>
+    <title>Database Designer</title>
     <base href="/" />
 
     <link href="vendor/bootstrap-4.5.2/css/bootstrap.min.css" rel="stylesheet" />
