--- a/DatabaseDesigner.Wasm/wwwroot/index.html
+++ b/DatabaseDesigner.Wasm/wwwroot/index.html
@@ -10,7 +10,7 @@
     <link href="vendor/bootstrap-4.5.2/css/bootstrap.min.css" rel="stylesheet" />
     <link href="vendor/fontawesome-free-5.14.0-web/css/all.css" rel="stylesheet" />
     <link href="_content/Z.Blazor.Diagrams/style.css" rel="stylesheet" />
-    <link href="_framework/scoped.styles.css" rel="stylesheet" />
+    <link href="DatabaseDesigner.Wasm.styles.css" rel="stylesheet" />
 </head>
 
 <body>
